# intracursus-import

./: .gitignore  README.md  pyproject.toml
intracursus_import/: import_scores.py  intracursus_import.py
tests/: Liste-Seance-2-TBFTR106-2023-2024.ods  scores.txt  test_import_scores.py
