[tool.poetry]
name = "intracursus-import"
version = "0.1.0"
description = ""
authors = ["Nicolas Pourcelot <nicolas.pourcelot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
openpyxl = "^3.1.2"
pyexcel-ods3 = "^0.6.1"
pyexcel = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
openpyxl-stubs = "^0.1.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
